fixed max width message on small devices

--- a/styles/messageInfo.module.css
+++ b/styles/messageInfo.module.css
@@ -135,4 +135,7 @@
   .header {
     width: 100vw;
   }
+  .message p {
+    max-width: 65vw;
+  }
 }
